# general_framework_for_portfolio

./: README.md  pyproject.toml
notebooks/: simple.ipynb
src/portfolio_optimization/constraints/: budget_constraints.py  risk_constraints.py
src/portfolio_optimization/forecasting/: forecasting_methods.py  generative_models.py
src/portfolio_optimization/objective_functions/: kelly_portfolio.py
src/portfolio_optimization/performance_attribution/: performance_analysis.py
